# GISVi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: HINCAS.dxf  MDT_rec_manz_rec.tif  centroide.gpkg  hh.gpkg  hincas_manz.gpkg  hincas_prueba.gpkg  m.tif  modulos.dxf  modulos_prueba.gpkg  prueba.qgz  wse_r.tif  wse_rec.tif  wse_rec.tif.aux.xml  wse_rec_rec.tif  wse_rec_rec.tif.aux.xml  wse_rec_rec_rec.tif  wse_rec_rec_rec.tif.aux.xml  wse_rr.tif  wse_rrr.tif  wse_rrr.tif.aux.xml  wse_rrrr.tif
assets/shaders/: cubeClipPlane.glsl  line.glsl  quad.glsl  terrainClipPlane.glsl
assets/shaders/cube/: cube.glsl  cubeInstacing.glsl  cubeInstacingMonoEntity.glsl  cubeInstacingMultiEntity.glsl
assets/shaders/terrain/: terrain.glsl  terrainClipPlane.glsl
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp  utils.h
src/graphics/: API.h  CMakeLists.txt  UUID.cpp  UUID.h  buffer.cpp  buffer.h  camera.cpp  camera.h  cameraController.cpp  cameraController.h  colorMaps.cpp  colorMaps.h  font.cpp  font.h  frameBuffer.cpp  frameBuffer.h  graphicsUtils.cpp  graphicsUtils.h  input.h  keyCodes.h  layer.h  layerStack.cpp  layerStack.h  mouseCodes.h  renderer.cpp  renderer.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  window.cpp  window.h
src/graphics/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUtils.cpp  OpenGLUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
src/graphics/scene/: CMakeLists.txt  components.h  entity.cpp  entity.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/io/: CMakeLists.txt  ioUtils.cpp  ioUtils.h  reader.cpp  reader.h
src/math/: CMakeLists.txt  math.cpp  math.h
src/ui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  app.cpp  app.h  editorLayer.cpp  editorLayer.h  entryLayer.cpp  entryLayer.h  uiUtils.cpp  uiUtils.h
src/ui/panels/: CMakeLists.txt  addLayersPanel.cpp  addLayersPanel.h  contentBrowserPanel.cpp  contentBrowserPanel.h  hierarchyPanel.cpp  hierarchyPanel.h  logPanel.cpp  logPanel.h  profilerPanel.h  settingsPanel.cpp  settingsPanel.h
